--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal Page</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <div id="banner">
+            <h1>Baimeng Fan</h1>
+            <h2>DES 157A - Interactive Media II - Winter 2023</h2>
+        </div>
+    </header>
 </body>
 </html>
