--- a/index.html
+++ b/index.html
@@ -13,5 +13,39 @@
             <h2>DES 157A - Interactive Media II - Winter 2023</h2>
         </div>
     </header>
+    <main>
+        <section id="left">
+            <h2>Studios</h2>
+            <ul>
+                <li><a href="">Learning Journal</a></li>
+                <li><a href="">Mad Libs 2.0</a></li>
+                <li><a href="">Every Picture</a></li>
+                <li><a href="">Game On!</a></li>
+            </ul>
+            <h2>Experiments</h2>
+            <ul>
+                <li><a href="">Exp 1</a></li>
+            </ul>
+        </section>
+        <section id="middle">
+            <h2>Research & Development</h2>
+            <ul>
+                <li><a href="">Project Brief</a></li>
+                <li><a href="">Design Comp</a></li>
+                <li><a href="">Version 1</a></li>
+                <li><a href="">Version 2 (User Test)</a></li>
+                <li><a href="">User Test Results</a></li>
+            </ul>
+        </section>
+        <section id="right">
+            <h2>Final</h2>
+            <ul>
+                <li><a href="">Final Project</a></li>
+            </ul>
+        </section>
+    </main>
+    <footer>
+        <a href="&#109;&#102;&#100;&#102;&#097;&#110;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">Email Me</a>
+    </footer>
 </body>
 </html>
