--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div id="banner">
             <h1>Baimeng Fan</h1>
-            <h2>DES 157A - Interactive Media II - Winter 2023</h2>
+            <h2 id="topic">DES 157A - Interactive Media II - Winter 2023</h2>
         </div>
     </header>
     <main>
@@ -46,7 +46,7 @@
         </section>
     </main>
     <footer>
-        <a href="&#109;&#102;&#100;&#102;&#097;&#110;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;">Email Me</a>
+        <a href="&#109;&#102;&#100;&#102;&#097;&#110;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;" id="foot">Email Me</a>
     </footer>
 </body>
 </html>
