--- a/exp/exp1.html
+++ b/exp/exp1.html
@@ -9,9 +9,10 @@
     <h1>Experiment 1</h1>
     <h2>In order to see the functionality of the code, please do the following: left click --- inspect --- console.</h2>
     <script>
-        //task:Write a program that takes a lowercase string and capitalizes the first letter of each word in the string.//
-        let text = "the quick brown fox jumps over the lazy dog"
-        let text2 = text.toUpperCase();
-    </script>
+        var pattern = "#";
+     for (i=0; i<7; i++){
+        console.log(pattern.repeat(i));
+     }
+   </script>
 </body>
 </html>
