--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div id="banner">
-            <h1>Baimeng Fan</h1>
-            <h2 id="topic">DES 157A - Interactive Media II - Winter 2023</h2>
-        </div>
-    </header>
     <main>
         <section id="left">
             <h2>Studios</h2>
@@ -49,6 +43,9 @@
         </section>
     </main>
     <footer>
+        
+        <p>Baimeng Fan</p>
+        <p id="topic">DES 157A - Interactive Media II - Winter 2023</p>
         <p><a href="&#109;&#102;&#100;&#102;&#097;&#110;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;" id="foot">Email Me</a></p>
     </footer>
 </body>
