--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <section id="left">
             <h2>Studios</h2>
             <ul>
-                <li><a href="">Learning Journal</a></li>
+                <li><a href="Journal/index.html">Learning Journal</a></li>
                 <li><a href="">Mad Libs 2.0</a></li>
                 <li><a href="">Every Picture</a></li>
                 <li><a href="">Game On!</a></li>
