--- a/Journal/index.html
+++ b/Journal/index.html
@@ -8,11 +8,13 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <h1>"Best Practices for Form Design" Journal</h1>
-    <p id="datetime">Wrote learning journal on <time timedate="2024-1-25">2024/1/25</time></p>
-    <p>Forms are a vital tool for data collection. UI/UX designers often use it for surveys; business of any fields use forms to gather data; the job application process is also leaning increasingly towards a remote setting. It is important for designers to learn to avoid usability errors and craete forms that are easier to folllow.
-    <br><a href="https://uxdesign.cc/best-practices-for-form-design-ff5de6ca8e5f">The article</a> discusses 20 best practices for form design. Each of these practices are considering the user's workflow, they are compartmentalizing information into steps, priority levels, and necessities. One practice I didn't notice before is the placement of inline texts; it is better to place the labels at the top of the text field, we also need to pay attention to alignment, and margin between the labels and text fields. The text fields it self should give an idication of the amount of text expected from the users. Dropdown menues are not great for forms and it is something we should avoid. The form should have visible priorities, we do this by highlighting certain text bubbles, and by having an action button. 
-    <br>When it comes to form design, I think Google Forms examplifies good form design practices. Because users have the option to have different steps, and all the questions are in sensible columns and rows, it also looks obvious when you click on something. Here is a <a href="https://docs.google.com/forms/d/1UNtPjZrQOLGSCc7XFxgpI0ZYvwPJaQ5T1XmutrEfs7U/edit">link</a> to a google form for reference.</p>
+    <article>
+        <h2>"Best Practices for Form Design" Journal</h2>
+        
+        <p>Forms are a vital tool for data collection. UI/UX designers often use it for surveys; business of any fields use forms to gather data; the job application process is also leaning increasingly towards a remote setting. It is important for designers to learn to avoid usability errors and craete forms that are easier to folllow.
+        <br><a href="https://uxdesign.cc/best-practices-for-form-design-ff5de6ca8e5f">The article</a> discusses 20 best practices for form design. Each of these practices are considering the user's workflow, they are compartmentalizing information into steps, priority levels, and necessities. One practice I didn't notice before is the placement of inline texts; it is better to place the labels at the top of the text field, we also need to pay attention to alignment, and margin between the labels and text fields. The text fields it self should give an idication of the amount of text expected from the users. Dropdown menues are not great for forms and it is something we should avoid. The form should have visible priorities, we do this by highlighting certain text bubbles, and by having an action button. 
+        <br>When it comes to form design, I think Google Forms examplifies good form design practices. Because users have the option to have different steps, and all the questions are in sensible columns and rows, it also looks obvious when you click on something. Here is a <a href="https://docs.google.com/forms/d/1UNtPjZrQOLGSCc7XFxgpI0ZYvwPJaQ5T1XmutrEfs7U/edit">link</a> to a google form for reference.</p>
+    </article>
     <img src="Images/journal.png" alt="sketch" width="600">
 </body>
 </html>
