--- a/Journal/index.html
+++ b/Journal/index.html
@@ -9,12 +9,18 @@
 </head>
 <body>
     <article>
-        <h2>"Best Practices for Form Design" Journal</h2>
+        <h2>Best Practices for Form Design</h2>
         
         <p>Forms are a vital tool for data collection. UI/UX designers often use it for surveys; business of any fields use forms to gather data; the job application process is also leaning increasingly towards a remote setting. It is important for designers to learn to avoid usability errors and craete forms that are easier to folllow.
         <br><a href="https://uxdesign.cc/best-practices-for-form-design-ff5de6ca8e5f">The article</a> discusses 20 best practices for form design. Each of these practices are considering the user's workflow, they are compartmentalizing information into steps, priority levels, and necessities. One practice I didn't notice before is the placement of inline texts; it is better to place the labels at the top of the text field, we also need to pay attention to alignment, and margin between the labels and text fields. The text fields it self should give an idication of the amount of text expected from the users. Dropdown menues are not great for forms and it is something we should avoid. The form should have visible priorities, we do this by highlighting certain text bubbles, and by having an action button. 
         <br>When it comes to form design, I think Google Forms examplifies good form design practices. Because users have the option to have different steps, and all the questions are in sensible columns and rows, it also looks obvious when you click on something. Here is a <a href="https://docs.google.com/forms/d/1UNtPjZrQOLGSCc7XFxgpI0ZYvwPJaQ5T1XmutrEfs7U/edit">link</a> to a google form for reference.</p>
+        <img src="Images/journal.png" alt="sketch" width="600">
     </article>
-    <img src="Images/journal.png" alt="sketch" width="600">
+    
+    <article>
+        <h2>Best Practices for Modals</h2>
+        <p>Modals are pop-up windows that grab the user's attention and it takes up the space of the whle screen temporarily util the user closes the modal. Modals can have advantages in several ways, such as it saves screen real estate, because it doesn't take up spaces in the actual webpage; and it is a good way to direct the user's attention to some information. Modal windows could be annoying as well, as it interrupts the flow of what the user is trying to do.</p>
+        <p>Here are some best practices for designing modals: All of the buttons should be actionable and understandable, there should be a clear action button that direct the user to a next step; there should be an escape hatch, so that users have the option to leave; its beeter practice if the modal is initiated by some action the user makes, such as clicking on a button, this way the modal is more integrated in user flow. Finally modals doesn't match well with mobile, in mobile interface its better to find alternatives such as scroll bar or drop-down menu. This journal is in response to <a href="https://uxplanet.org/best-practices-for-modals-overlays-dialog-windows-c00c66cddd8c">this</a> rescource.</p>
+    </article>
 </body>
 </html>
