--- a/index.html
+++ b/index.html
@@ -44,10 +44,8 @@
         </section>
     </main>
     <footer>
-        
-        <p>Baimeng Fan</p>
-        <p id="topic">DES 157A - Interactive Media II - Winter 2023</p>
         <p><a href="&#109;&#102;&#100;&#102;&#097;&#110;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;" id="foot">Email Me</a></p>
+        <p id="topic">Baimeng Fan - DES 157A - Interactive Media II - Winter 2023</p>
     </footer>
 </body>
 </html>
