--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sixtyfour&display=swap" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
@@ -44,7 +44,7 @@
         </section>
     </main>
     <footer>
-        <p><a href="&#109;&#102;&#100;&#102;&#097;&#110;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;" id="foot">Email Me</a></p>
+        <p><a href="&#109;&#102;&#100;&#102;&#097;&#110;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;" id="email">Email Me</a></p>
         <p id="topic">Baimeng Fan - DES 157A - Interactive Media II - Winter 2023</p>
     </footer>
 </body>
