--- a/index.html
+++ b/index.html
@@ -13,34 +13,40 @@
 <body>
     <main>
         <section id="left">
-            <h2>Studios</h2>
-            <ul>
-                <li><a href="Journal/index.html">Learning Journal</a></li>
-                <li><a href="studio1/index.html">Mad Libs</a></li>
-                <li><a href="">Every Picture</a></li>
-                <li><a href="">Game On!</a></li>
-            </ul>
-            <h2>Experiments</h2>
-            <ul>
-                <li><a href="exp/exp1.html">Exp 1</a></li>
-                <li><a href="exp/exp2.html">Exp 2</a></li>
-            </ul>
+            <div id="studio">
+                <h2>Studios</h2>
+                <ul>
+                    <li><a href="Journal/index.html">Learning Journal</a></li>
+                    <li><a href="studio1/index.html">Mad Libs</a></li>
+                    <li><a href="">Every Picture</a></li>
+                    <li><a href="">Game On!</a></li>
+                </ul>
+                <h2>Experiments</h2>
+                <ul>
+                    <li><a href="exp/exp1.html">Exp 1</a></li>
+                    <li><a href="exp/exp2.html">Exp 2</a></li>
+                </ul>
+            </div>
         </section>
         <section id="middle">
-            <h2>Research & Development</h2>
-            <ul>
-                <li><a href="">Project Brief</a></li>
-                <li><a href="">Design Comp</a></li>
-                <li><a href="">Version 1</a></li>
-                <li><a href="">Version 2 (User Test)</a></li>
-                <li><a href="">User Test Results</a></li>
-            </ul>
+            <div id="rd">
+                <h2>Research & Development</h2>
+                <ul>
+                    <li><a href="">Project Brief</a></li>
+                    <li><a href="">Design Comp</a></li>
+                    <li><a href="">Version 1</a></li>
+                    <li><a href="">Version 2 (User Test)</a></li>
+                    <li><a href="">User Test Results</a></li>
+                </ul>
+            </div>
         </section>
         <section id="right">
-            <h2>Final</h2>
-            <ul>
-                <li><a href="">Final Project</a></li>
-            </ul>
+            <div id="final">
+                <h2>Final</h2>
+                <ul>
+                    <li><a href="">Final Project</a></li>
+                </ul>
+            </div>
         </section>
     </main>
     <footer>
