--- a/studio1/index.html
+++ b/studio1/index.html
@@ -16,12 +16,22 @@
        <form>
            <label for="noun1">Provide a noun</label>
            <input type="text" id="noun1" required>
-           <label for="noun2">Provide another noun</label>
-           <input type="text" id="noun2" required>
-           <label for="adj">Provide a adjective</label>
+           <label for="animal">Provide another noun</label>
+           <input type="text" id="animal" required>
+           <label for="nouns">Provide a adjective</label>
+           <input type="text" id="nouns" required>
+           <label for="emotion">Provide a verb</label>
+           <input type="text" id="emotion" required>
+           <label for="creatures">Provide a noun</label>
+           <input type="text" id="creatures" required>
+           <label for="substance">Provide a noun</label>
+           <input type="text" id="substance" required>
+           <label for="adj">Provide a noun</label>
            <input type="text" id="adj" required>
-           <label for="verb">Provide a verb</label>
-           <input type="text" id="verb" required>
+           <label for="noun2">Provide a noun</label>
+           <input type="text" id="noun2" required>
+           <label for="noun3">Provide a noun</label>
+           <input type="text" id="noun3" required>
            <input type="submit" value="send">
        </form>
        <article id="madlib"></article>
