--- a/studio1/index.html
+++ b/studio1/index.html
@@ -10,27 +10,27 @@
 </head>
 <body>
     <header>
-        <h1>Build a Mad Lib Script</h1>
+        <h1>Parable Generator</h1>
    </header>
    <main>
        <form>
            <label for="noun1">Provide a noun</label>
            <input type="text" id="noun1" required>
-           <label for="animal">Provide another noun</label>
+           <label for="animal">Provide name of an animal</label>
            <input type="text" id="animal" required>
-           <label for="nouns">Provide a adjective</label>
+           <label for="nouns">Provide plural nouns</label>
            <input type="text" id="nouns" required>
-           <label for="emotion">Provide a verb</label>
+           <label for="emotion">Provide an emotion</label>
            <input type="text" id="emotion" required>
-           <label for="creatures">Provide a noun</label>
+           <label for="creatures">Provide a mythical creature</label>
            <input type="text" id="creatures" required>
-           <label for="substance">Provide a noun</label>
+           <label for="substance">Provide a substance</label>
            <input type="text" id="substance" required>
-           <label for="adj">Provide a noun</label>
+           <label for="adj">Provide an adjective</label>
            <input type="text" id="adj" required>
-           <label for="noun2">Provide a noun</label>
+           <label for="noun2">Provide another noun</label>
            <input type="text" id="noun2" required>
-           <label for="noun3">Provide a noun</label>
+           <label for="noun3">Provide another noun</label>
            <input type="text" id="noun3" required>
            <input type="submit" value="send">
        </form>
