--- a/studio1/index.html
+++ b/studio1/index.html
@@ -6,37 +6,44 @@
     <title>Studio 1</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sixtyfour&display=swap" rel="stylesheet">
     <script src="script.js" defer></script>
 </head>
 <body>
-    <header>
-        <h1>Parable Generator</h1>
-   </header>
-   <main>
-       <form>
-           <label for="noun1">Provide a noun</label>
-           <input type="text" id="noun1" required>
-           <label for="animal">Provide name of an animal</label>
-           <input type="text" id="animal" required>
-           <label for="nouns">Provide plural nouns</label>
-           <input type="text" id="nouns" required>
-           <label for="emotion">Provide an emotion</label>
-           <input type="text" id="emotion" required>
-           <label for="creatures">Provide a mythical creature</label>
-           <input type="text" id="creatures" required>
-           <label for="substance">Provide a substance</label>
-           <input type="text" id="substance" required>
-           <label for="adj">Provide an adjective</label>
-           <input type="text" id="adj" required>
-           <label for="noun2">Provide another noun</label>
-           <input type="text" id="noun2" required>
-           <label for="noun3">Provide another noun</label>
-           <input type="text" id="noun3" required>
-           <input type="submit" value="send">
-       </form>
-       <article id="madlib"></article>
-   </main>
-   <footer>
-   </footer> 
+    <div id="flex">
+        <header>
+            <h1>Parable Generator</h1>
+        </header>
+       <main>
+            <form>
+                <label for="noun1">Provide a noun</label>
+                <input type="text" id="noun1" required>
+                <label for="animal">Provide name of an animal</label>
+                <input type="text" id="animal" required>
+                <label for="nouns">Provide plural nouns</label>
+                <input type="text" id="nouns" required>
+                <label for="emotion">Provide an emotion</label>
+                <input type="text" id="emotion" required>
+                <label for="creatures">Provide a mythical creature</label>
+                <input type="text" id="creatures" required>
+                <label for="substance">Provide a substance</label>
+                <input type="text" id="substance" required>
+                <label for="adj">Provide an adjective</label>
+                <input type="text" id="adj" required>
+                <label for="noun2">Provide another noun</label>
+                <input type="text" id="noun2" required>
+                <label for="noun3">Provide another noun</label>
+                <input type="text" id="noun3" required>
+                <button onclick="window.location.href='generated.html'"><input type="submit" value="send"></button>
+            </form>
+            <!-- <article id="madlib"></article> -->
+        </main>
+    </div>
+    <footer>
+        <p>Page by Baimeng Fan - DES157A - Winter 2024</p>
+    </footer>
+    
 </body>
 </html>
