--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </ul>
             </div>
         </section>
-        <section id="right">
+        <section id="right" class="right">
             <div id="final">
                 <h2>Final</h2>
                 <ul>
