--- a/studio1/index.html
+++ b/studio1/index.html
@@ -15,6 +15,9 @@
     <div id="flex">
         <header>
             <h1>Parable Generator</h1>
+            <a hred="#" id="button">
+                send
+            </a>
         </header>
        <main>
             <form>
@@ -36,9 +39,7 @@
                 <input type="text" id="noun2" required>
                 <label for="noun3">Provide another noun</label>
                 <input type="text" id="noun3" required>
-                <button onclick="window.location.href='generated.html'"><input type="submit" value="send"></button>
             </form>
-            <!-- <article id="madlib"></article> -->
         </main>
     </div>
     <footer>
