--- a/studio1/index.html
+++ b/studio1/index.html
@@ -15,11 +15,9 @@
     <div id="flex">
         <header>
             <h1>Parable Generator</h1>
-            <a hred="#" id="button">
-                send
-            </a>
+            <a hred="#" id="button">send</a>
         </header>
-       <main>
+       <main id="text">
             <form>
                 <label for="noun1">Provide a noun</label>
                 <input type="text" id="noun1" required>
@@ -42,9 +40,9 @@
             </form>
         </main>
     </div>
-    <footer>
+    <!-- <footer>
         <p>Page by Baimeng Fan - DES157A - Winter 2024</p>
-    </footer>
+    </footer> -->
     
 </body>
 </html>
