--- a/studio1/index.html
+++ b/studio1/index.html
@@ -15,7 +15,7 @@
     <div id="flex">
         <header>
             <h1>Parable Generator</h1>
-            <a hred="#" id="button">send</a>
+            <a href="#" id="button">send</a>
         </header>
        <main id="text">
             <form>
