--- a/exp/exp1.html
+++ b/exp/exp1.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>exp1</title>
+    <link rel="icon" href="Images/icon.png">
 </head>
 <body>
     <h1>Experiment 1</h1>
-    <h2>In order to see the functionality of the code, please do the following: left click --- inspect --- console.</h2>
+    <h2>Left click --- inspect --- console to see a hash tree.</h2>
     <script>
         var pattern = "#";
      for (i=0; i<7; i++){
