--- a/exp/exp2.html
+++ b/exp/exp2.html
@@ -9,6 +9,7 @@
           font-family:Georgia, 'Times New Roman', Times, serif;
         }
     </style>
+    <link rel="icon" href="Images/icon.png">
 </head>
 <body>
     <h1>Experiment 2</h1>
