--- a/studio1/index.html
+++ b/studio1/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sixtyfour&display=swap" rel="stylesheet">
     <script src="script.js" defer></script>
+    <link rel="icon" href="Images/icon.png">
 </head>
 <body>
     <div id="flex">
