--- a/GameOn/index.html
+++ b/GameOn/index.html
@@ -3,15 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portal Page</title>
+    <title>Game On!</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sixtyfour&display=swap" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
     <link rel="icon" href="Images/icon.png">
+    <script src="script.js" defer></script>
 </head>
 <body>
-
+    <h1>Simple Simon</h1>
+    <h2>A Call and Response Game</h2>
+    <p id="score">Current Score: <span>0</span></p>
+    <section id="game">
+        <div id="pad1"></div>
+        <div id="pad2"></div>
+        <div id="pad3"></div>
+        <div id="pad4"></div>
+        <div id="pad5"></div>
+    </section>
+    <p id="message">Click the start game button to start</p>
+    <p id="action"><a href="#">Start Game</a></p> 
 </body>
 </html>
