--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="Journal/index.html">Learning Journal</a></li>
                     <li><a href="studio1/index.html">Mad Libs</a></li>
                     <li><a href="studio2/index.html">Every Picture</a></li>
-                    <li><a href="">Game On!</a></li>
+                    <li><a href="GameOn/index.html">Game On!</a></li>
                 </ul>
                 <h2>Experiments</h2>
                 <ul>
