--- a/GameOn/index.html
+++ b/GameOn/index.html
@@ -13,9 +13,8 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>Simple Simon</h1>
-    <h2>A Call and Response Game</h2>
-    <p id="score">Current Score: <span>0</span></p>
+    <h1>Simon Says</h1>
+    <p id="score">Score: <span>0</span></p>
     <section id="game">
         <div id="pad1"></div>
         <div id="pad2"></div>
@@ -23,7 +22,7 @@
         <div id="pad4"></div>
         <div id="pad5"></div>
     </section>
-    <p id="message">Click the start game button to start</p>
-    <p id="action"><a href="#">Start Game</a></p> 
+    <p id="message">Click the start button to start</p>
+    <p id="action"><a href="#">Start</a></p> 
 </body>
 </html>
