--- a/GameOn/index.html
+++ b/GameOn/index.html
@@ -13,16 +13,19 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <h1>Simon Says</h1>
-    <p id="score">Score: <span>0</span></p>
-    <section id="game">
-        <div id="pad1"></div>
-        <div id="pad2"></div>
-        <div id="pad3"></div>
-        <div id="pad4"></div>
-        <div id="pad5"></div>
-    </section>
-    <p id="message">Click the start button to start</p>
-    <p id="action"><a href="#">Start</a></p> 
+    <main>
+        <section id="game">
+            <div id="pad1"><img src="images/5.png" alt="Pad 1"></div>
+            <div id="pad2"><img src="images/2.png" alt="Pad 2"></div>
+            <div id="pad3"><img src="images/1.png" alt="Pad 3"></div>
+            <div id="pad4"><img src="images/3.png" alt="Pad 4"></div>
+            <div id="pad5"><img src="images/4.png" alt="Pad 5"></div>
+        </section>
+        <section id="text">
+            <p id="score">Score: <span>0</span></p>
+            <p id="message">Click the start button to begin</p>
+            <p id="action"><a href="#">Start</a></p> 
+        </section>
+    </main>
 </body>
 </html>
