--- a/GameOn/index.html
+++ b/GameOn/index.html
@@ -15,11 +15,11 @@
 <body>
     <main>
         <section id="game">
-            <div id="pad1"><img src="images/5.png" alt="Pad 1"></div>
-            <div id="pad2"><img src="images/2.png" alt="Pad 2"></div>
-            <div id="pad3"><img src="images/1.png" alt="Pad 3"></div>
-            <div id="pad4"><img src="images/3.png" alt="Pad 4"></div>
-            <div id="pad5"><img src="images/4.png" alt="Pad 5"></div>
+            <div id="pad1"><img src="images/5.png" alt="Pad 1" id="yellow"></div>
+            <div id="pad2"><img src="images/2.png" alt="Pad 2" id="red"></div>
+            <div id="pad3"><img src="images/1.png" alt="Pad 3" id="green"></div>
+            <div id="pad4"><img src="images/3.png" alt="Pad 4" id="blue"></div>
+            <div id="pad5"><img src="images/4.png" alt="Pad 5" id="white"></div>
         </section>
         <section id="text">
             <p id="score">Score: <span>0</span></p>
