--- a/Final/brief.html
+++ b/Final/brief.html
@@ -14,7 +14,7 @@
 <body>
     <h1>Brief for Final --- EveryPicture Improved</h1>
     <p>
-        Project Summary: 1 sentence summary indicating which project you are updating and why you chose that project.
+        Project Summary: I choose to do another iteration
     </p>
     <p>
         Project Description: Write a brief paragraph (100 - 300 words) providing more detail on what you plan to do for the project and specifically how you plan to improve functionality, design and usability. Which of these three is going to be your major focus? 
