--- a/Final/brief.html
+++ b/Final/brief.html
@@ -13,14 +13,15 @@
 </head>
 <body>
     <h1>Brief for Final --- EveryPicture Improved</h1>
-    <p>
-        Project Summary: I choose to do another iteration
+    <p>I want to do another iteration of my EveryPicture project for the Final. I like that the project is centered around images, and I had some plans for the project that I didn't have enough time to finish before.
     </p>
-    <p>
-        Project Description: Write a brief paragraph (100 - 300 words) providing more detail on what you plan to do for the project and specifically how you plan to improve functionality, design and usability. Which of these three is going to be your major focus? 
+    <p>The premise of my EveryPicture project is taking the users "down a memory lane". Design wise I want to add a polaroid background to the overlay part, I think aesthetics of polaroid naturally carries a sense of nostalgia; I also plan to change the background so that it mixes better with the silde show. I tried to test the page on 2G internet speed, and I noticed that the pictures duplicate very slowly, it mostly will only duplicate when the last set is about to move off the screen. I think the functionality of the page can be much improved if I can solve this problem. I also plan to add animation for when the overlay pop-up, maybe it can slide in or zoom in some fashion. In terms of usability, I got a lot of feedbacks from peer reviews saying the lack of texts or explanations is confusing or "ominous", I'll definitely add more descriptive text, maybe an icon. The biggest change I want to add is gamigying the website a bit by adding a section where you can send in a reflection or random thought the users get after looking at the pictures to my email, so maybe there can be a button that reads "feedback", if the user click on the button they get choices for the images to leave thoughts on; this section would recall the madlibs project we did. I have pictures of different locations, So I have another idea for a button where you click on it it show the images from different locations as categories, this can be an alternative way for the users to navigate through the page especially if I add more images in the future.</p>
+    <p>For the expert review section, I want to get  feedback from one of our professors that teaches UIUX, specifically Kathreen Fontecha; I also plan to get feedback from our TA Rheiana.
     </p>
-    <p>
-        Expert Feedback: With whom might you share your ideas for your major area of focus to get further feedback and help you further iterate and improve the project. See below for expert feedback requirements.
-    </p>
+
+    <figure>
+        <img src="Images/ss.png" alt="screenshot">
+        <!-- <figcaption>EveryPicture | Baimeng Fan</figcaption> -->
+       </figure>
 </body>
 </html>
