--- a/GameOn/index.html
+++ b/GameOn/index.html
@@ -14,6 +14,13 @@
 </head>
 <body>
     <main>
+        
+        <section id="text">
+            <p>Simon Says</p>
+            <p id="message">Click the start button to begin</p>
+            <p id="score">Score: <span>0</span></p>
+            <p id="action"><a href="#">Start</a></p> 
+        </section>
         <section id="game">
             <div id="pad1"><img src="images/5.png" alt="Pad 1" id="yellow"></div>
             <div id="pad2"><img src="images/2.png" alt="Pad 2" id="red"></div>
@@ -21,11 +28,17 @@
             <div id="pad4"><img src="images/3.png" alt="Pad 4" id="blue"></div>
             <div id="pad5"><img src="images/4.png" alt="Pad 5" id="white"></div>
         </section>
-        <section id="text">
-            <p id="score">Score: <span>0</span></p>
-            <p id="message">Click the start button to begin</p>
-            <p id="action"><a href="#">Start</a></p> 
+
+        <audio id="do" src="Sounds/doo.mp3"></audio>
+        <audio id="re" src="Sounds/ree.mp3"></audio>
+        <audio id="mi" src="Sounds/mii.mp3"></audio>
+        <audio id="fa" src="Sounds/faa.mp3"></audio>
+        <audio id="so" src="Sounds/soo.mp3"></audio>
+
+        <section>
+            
         </section>
+
     </main>
 </body>
 </html>
