--- a/GameOn/index.html
+++ b/GameOn/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sixtyfour&display=swap" rel="stylesheet">
     <link href="styles.css" rel="stylesheet">
-    <link rel="icon" href="Images/icon.png">
+    <link rel="icon" href="images/icon.png">
     <script src="script.js" defer></script>
 </head>
 <body>
