--- a/GameOn/index.html
+++ b/GameOn/index.html
@@ -22,21 +22,19 @@
             <p id="action"><a href="#">Start</a></p> 
         </section>
         <section id="game">
-            <div id="pad1"><img src="images/5.png" alt="Pad 1" id="yellow"></div>
-            <div id="pad2"><img src="images/2.png" alt="Pad 2" id="red"></div>
-            <div id="pad3"><img src="images/1.png" alt="Pad 3" id="green"></div>
-            <div id="pad4"><img src="images/3.png" alt="Pad 4" id="blue"></div>
-            <div id="pad5"><img src="images/4.png" alt="Pad 5" id="white"></div>
+            <div id="pad1"><img src="images/5.png" alt="Pad 1" id="pad1"></div>
+            <div id="pad2"><img src="images/2.png" alt="Pad 2" id="pad2"></div>
+            <div id="pad3"><img src="images/1.png" alt="Pad 3" id="pad3"></div>
+            <div id="pad4"><img src="images/3.png" alt="Pad 4" id="pad4"></div>
+            <div id="pad5"><img src="images/4.png" alt="Pad 5" id="pad5"></div>
         </section>
 
-        <audio id="do" src="Sounds/doo.mp3"></audio>
-        <audio id="re" src="Sounds/ree.mp3"></audio>
-        <audio id="mi" src="Sounds/mii.mp3"></audio>
-        <audio id="fa" src="Sounds/faa.mp3"></audio>
-        <audio id="so" src="Sounds/soo.mp3"></audio>
-
         <section>
-            
+           <audio id="do" src="Sounds/doo.mp3"></audio>
+           <audio id="re" src="Sounds/ree.mp3"></audio>
+           <audio id="mi" src="Sounds/mii.mp3"></audio>
+           <audio id="fa" src="Sounds/faa.mp3"></audio>
+           <audio id="so" src="Sounds/soo.mp3"></audio> 
         </section>
 
     </main>
