--- a/GameOn/index.html
+++ b/GameOn/index.html
@@ -21,6 +21,7 @@
             <p id="score">Score: <span>0</span></p>
             <p id="action"><a href="#">Start</a></p> 
         </section>
+        
         <section id="game">
             <div id="pad1"><img src="images/5.png" alt="Pad 1" id="pad1"></div>
             <div id="pad2"><img src="images/2.png" alt="Pad 2" id="pad2"></div>
@@ -29,14 +30,12 @@
             <div id="pad5"><img src="images/4.png" alt="Pad 5" id="pad5"></div>
         </section>
 
-        <section>
-           <audio id="do" src="Sounds/doo.mp3"></audio>
-           <audio id="re" src="Sounds/ree.mp3"></audio>
-           <audio id="mi" src="Sounds/mii.mp3"></audio>
-           <audio id="fa" src="Sounds/faa.mp3"></audio>
-           <audio id="so" src="Sounds/soo.mp3"></audio> 
-        </section>
-
+        <audio id="sound1" src="Sounds/doo.mp3"></audio>
+        <audio id="sound2" src="Sounds/ree.mp3"></audio>
+        <audio id="sound3" src="Sounds/mii.mp3"></audio>
+        <audio id="sound4" src="Sounds/faa.mp3"></audio>
+        <audio id="sound5" src="Sounds/soo.mp3"></audio>        
+        
     </main>
 </body>
 </html>
