--- a/index.html
+++ b/index.html
@@ -34,10 +34,8 @@
                 <h2>Research & Development</h2>
                 <ul>
                     <li><a href="Final/brief.html">Project Brief</a></li>
-                    <li><a href="">Design Comp</a></li>
-                    <li><a href="">Version 1</a></li>
-                    <li><a href="">Version 2 (User Test)</a></li>
-                    <li><a href="">User Test Results</a></li>
+                    <li><a href="Final/rnr.html">Process Work</a></li>
+                    <li><a href="Final/expert.html">Final Project Report</a></li>
                 </ul>
             </div>
         </section>
