--- a/Final/expert.html
+++ b/Final/expert.html
@@ -13,6 +13,6 @@
 </head>
 <body>
     
-    <p><link href="https://www.figma.com/proto/boUfTJwTn6iSC5J4DftC8w/everypicture-user-test?type=design&node-id=1-2&t=3g0BgM8hxIEKXmGR-1&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A2&mode=design">Prototype Link</p>
+    <p><a href="https://www.figma.com/proto/boUfTJwTn6iSC5J4DftC8w/everypicture-user-test?type=design&node-id=1-2&t=3g0BgM8hxIEKXmGR-1&scaling=scale-down&page-id=0%3A1&starting-point-node-id=1%3A2&mode=design">Prototype Link</a></p>
 </body>
 </html>
