--- a/Final/expert.html
+++ b/Final/expert.html
@@ -26,7 +26,7 @@
         <p>Suggested using post tags for the locations button to evoke a sense of travel. Recommended integrating the feedback section into an overlay within the slider for improved visibility and functionality.Expressed confusion regarding the purpose of the feedback section due to lack of description.Recommended adjusting the wording of the feedback button or integrating it into the slider overlay for clarity.Advised checking the button's contrast with the background.Noted that the doodle resembles a button and suggested adding functionality to it.</p>
     <h3>Conclusion</h3>
         
-        Adjust button wording to clarify their purpose, e.g., "send me a message." Enhance button visibility by improving contrast with the background. Integrate feedback section into slider overlay for improved clarity and accessibility. Consider adding functionality to the doodle to enhance user engagement. Provide descriptive text for gallery images to enhance user understanding.<br>
+        <p>Adjust button wording to clarify their purpose, e.g., "send me a message." Enhance button visibility by improving contrast with the background. Integrate feedback section into slider overlay for improved clarity and accessibility. Consider adding functionality to the doodle to enhance user engagement. Provide descriptive text for gallery images to enhance user understanding.<br>
         Overall, the prototype design is effective, but improvements are needed to enhance button visibility, clarify button functions, and integrate feedback section for improved usability. Incorporating user suggestions will likely result in a more intuitive and user-friendly design.</p>
     <img src="Images/index.png">
 </body>
