--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div id="final">
                 <h2>Final</h2>
                 <ul>
-                    <li><a href="">Final Project</a></li>
+                    <li><a href="Final/final/index.html">Final Project</a></li>
                 </ul>
             </div>
         </section>
